tests/ui/liveness/liveness-unused.stderr
warning: unreachable statement
  --> $DIR/liveness-unused.rs:119:9
   |
LL |         continue;
   |         -------- any code following this expression is unreachable
LL |         drop(*x as i32);
   |         ^^^^^^^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/liveness-unused.rs:1:9
   |
LL | #![warn(unused)]
   |         ^^^^^^
   = note: `#[warn(unreachable_code)]` implied by `#[warn(unused)]`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:8:7
   |
LL | fn f1(x: isize) {
   |       ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
note: the lint level is defined here
  --> $DIR/liveness-unused.rs:2:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:12:8
   |
LL | fn f1b(x: &mut isize) {
   |        ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:20:9
   |
LL |     let x: isize;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:25:9
   |
LL |     let x = 3;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`

error: variable `x` is assigned to, but never used
  --> $DIR/liveness-unused.rs:30:9
   |
LL |     let mut x = 3;
   |         ^^^^^
   |
   = note: consider using `_x` instead

error: value assigned to `x` is never read
  --> $DIR/liveness-unused.rs:32:5
   |
LL |     x += 4;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?
note: the lint level is defined here
  --> $DIR/liveness-unused.rs:3:9
   |
LL | #![deny(unused_assignments)]
   |         ^^^^^^^^^^^^^^^^^^

error: variable `z` is assigned to, but never used
  --> $DIR/liveness-unused.rs:37:9
   |
LL |     let mut z = 3;
   |         ^^^^^
   |
   = note: consider using `_z` instead

error: value assigned to `z` is never read
  --> $DIR/liveness-unused.rs:40:9
   |
LL |         z += 4;
   |         ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `z` is never read
  --> $DIR/liveness-unused.rs:48:12
   |
LL |     loop { z += 4; }
   |            ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: variable `z` is assigned to, but never used
  --> $DIR/liveness-unused.rs:61:9
   |
LL |     let mut z = 3;
   |         ^^^^^
   |
   = note: consider using `_z` instead

error: value assigned to `z` is never read
  --> $DIR/liveness-unused.rs:64:9
   |
LL |         z += a;
   |         ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: unused variable: `i`
  --> $DIR/liveness-unused.rs:71:12
   |
LL |       Some(i) => {
   |            ^ help: if this is intentional, prefix it with an underscore: `_i`

error: unused variable: `i`
  --> $DIR/liveness-unused.rs:84:14
   |
LL |       tri::a(i) | tri::b(i) | tri::c(i) => {
   |              ^           ^           ^
   |
help: if this is intentional, prefix it with an underscore
   |
LL |       tri::a(_i) | tri::b(_i) | tri::c(_i) => {
   |              ~~           ~~           ~~

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:106:9
   |
LL |     for x in 1..10 { }
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:111:10
   |
LL |     for (x, _) in [1, 2, 3].iter().enumerate() { }
   |          ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:116:13
   |
LL |     for (_, x) in [1, 2, 3].iter().enumerate() {
   |             ^ help: if this is intentional, prefix it with an underscore: `_x`

error: variable `x` is assigned to, but never used
  --> $DIR/liveness-unused.rs:139:9
   |
LL |     let x;
   |         ^
   |
   = note: consider using `_x` instead

error: value assigned to `x` is never read
  --> $DIR/liveness-unused.rs:143:9
   |
LL |         x = 0;
   |         ^^^^^
   |
   = help: maybe it is overwritten before being read?

error: variable `a` is assigned to, but never used
  --> $DIR/liveness-unused.rs:172:9
   |
LL |     let mut a = 10;
   |         ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:182:5
   |
LL |     a += b;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:184:5
   |
LL |     a -= c;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:186:5
   |
LL |     a *= d;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:188:5
   |
LL |     a /= e;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:190:5
   |
LL |     a |= f;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:192:5
   |
LL |     a &= g;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:194:5
   |
LL |     a %= h;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: variable `a` is assigned to, but never used
  --> $DIR/liveness-unused.rs:220:9
   |
LL |     let mut a = 10.;
   |         ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:228:5
   |
LL |     a += b;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:230:5
   |
LL |     a -= c;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:232:5
   |
LL |     a *= d;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:234:5
   |
LL |     a /= e;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:236:5
   |
LL |     a %= f;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: variable `a` is assigned to, but never used
  --> $DIR/liveness-unused.rs:240:11
   |
LL | fn f10<T>(mut a: T, b: T) {
   |           ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:242:5
   |
LL |     a = b;
   |     ^
   |
   = help: maybe it is overwritten before being read?

error: aborting due to 34 previous errors; 1 warning emitted

